# sigis-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DELIVERY.md  Dockerfile  README.md  RELEASE.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  sigis.db-shm  sigis.db-wal
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_04_03_1706-1c921af888f7_initial_schema.py  2026_04_03_1856-e8f9ccd28d04_add_auth_user_roles_reset_tokens.py  2026_04_03_1908-5aecd3f59a30_add_role_permissions.py  2026_04_04_1200-a1b2c3d4e5f6_sigis_v2_features.py  2026_04_05_1000-b2c3d4e5f6a7_single_role_per_user.py  2026_04_09_0001-c3d4e5f6a7b8_mobile_offline_sync_tables.py
api/: __init__.py  dependencies.py  deps.py  main.py  rate_limit.py
api/middleware/: access_log.py  request_id.py
api/v1/: admin.py  audit.py  auth.py  establishments.py  exception_requests.py  health.py  missions.py  mobile.py  reports.py  roles.py  router.py  schemas.py  site_visits.py  telemetry.py  users.py
application/: __init__.py
application/ports/: __init__.py  email_port.py  repositories.py  settings_port.py  unit_of_work.py
application/use_cases/: __init__.py  admin_full_bootstrap.py  admin_seed_demo_users.py  check_in_inspector.py  check_out_visit.py  confirm_host_presence.py  create_exception_request.py  create_mission.py  mission_workflow.py
common/: __init__.py  audit.py  business_notifications.py  host_qr_jwt.py  http_errors.py  openapi_errors.py  pagination.py  password_hashing.py
docs/: ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  GAP_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  MOBILE_PROOF_PACKAGE.md  OFFLINE_MOBILE_GAPS.md  QUICK_START.md  REAL_BUSINESS_EXPECTATIONS.md  TESTING.md  V1_COMPLETION_INDEX.md  V1_IMPLEMENTATION_SUMMARY.md  V1_MATURITY_SCORE.md
domain/: __init__.py  errors.py
domain/audit/: __init__.py  audit_log_entry.py
domain/establishment/: __init__.py  establishment.py
domain/exception_request/: __init__.py  exception_request.py
domain/identity/: __init__.py  mobile_device.py  permission.py  role.py  role_defaults.py  user.py
domain/mission/: __init__.py  mission.py  mission_outcome.py
domain/presence/: __init__.py  models.py
domain/shared/: __init__.py  (+7 more)
infrastructure/: __init__.py
scripts/: __init__.py  seed_massive_fake.py  seed_role_users.py
tests/: conftest.py  test_anomaly_detection.py  test_business_rules.py  test_device_binding.py  test_flow_v1.py  test_gps_quality.py  test_integration_e2e.py  test_offline_grace.py
(+34 files in other folders)
