[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sigis-backend"
version = "0.1.0"
description = "SIGIS — traçabilité missions d'inspection (backend FastAPI, DDD)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.14.0",
]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
